# alphasplitter

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  families.json  family_consensus.fa
satkmer_compare/: README.md  satkmer_compare.sh
satkmer_compare/example_output/: SUMMARY.md  alpha_23mer_annotation.head.tsv  per_chromosome_satellite_cn.tsv  rank_compare.head.tsv
src/: io.rs  kmer.rs  lib.rs  main.rs  monomer.rs
src/cmd/: annotate_cenpb.rs  build_hpc_hmms.rs  cenpb_spacing.rs  classify_reads.rs  discover_chains.rs  find_box.rs  find_periodic_boxes.rs  find_phase.rs  mod.rs  motif_cut.rs  motif_graph.rs  reads_alphabet.rs  reads_extract.rs  scan_reads.rs
tests/: test_e2e.sh
